kafka-1210; Windows Bat files are not working properly; patched by Stevo Slavic; reviewed by Jun Rao